--- a/src/app/modules/user/components/login/login.component.html
+++ b/src/app/modules/user/components/login/login.component.html
@@ -1,18 +1,19 @@
 <mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }">
 	<mat-card-title>LOGIN</mat-card-title>
 	<mat-card-content>
-		<form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
+		<form novalidate (ngSubmit)="login()" [formGroup]="userForm">
 			<mat-form-field style="width: 100%" appearance="fill">
 				<mat-label>Email</mat-label>
 				<input
 					matInput
-					name="email"
 					type="email"
 					id="email"
-					[(ngModel)]="email"
-					required
-					#emailField="ngModel" />
-				<mat-error *ngIf="emailField.invalid && emailField.touched">
+					formControlName="email" />
+				<mat-error
+					*ngIf="
+						userForm.get('email')?.invalid &&
+						userForm.get('email')?.touched
+					">
 					Email is required
 				</mat-error>
 			</mat-form-field>
@@ -21,18 +22,18 @@
 				<input
 					matInput
 					minlength="4"
-					name="password"
 					type="password"
 					id="password"
-					[(ngModel)]="password"
-					required
-					#passwordField="ngModel" />
+					formControlName="password" />
 				<mat-error
-					*ngIf="passwordField.invalid && passwordField.touched">
+					*ngIf="
+						userForm.get('password')?.invalid &&
+						userForm.get('password')?.touched
+					">
 					Password should be atleast 4 characters long
 				</mat-error>
 			</mat-form-field>
-			<div
+			<!-- <div
 				*ngIf="error$ | async as error"
 				class="alert alert-danger alert-dismissible">
 				<button
@@ -40,7 +41,7 @@
 					class="btn-close"
 					data-bs-dismiss="alert"></button>
 				{{ error }}
-			</div>
+			</div> -->
 			<button mat-raised-button type="submit" color="primary">
 				Login
 			</button>
