--- a/src/app/modules/user/components/register/register.component.html
+++ b/src/app/modules/user/components/register/register.component.html
@@ -1,73 +1,71 @@
-<div [ngClass]="{ 'bg-dark text-light': darkTheme }" class="card">
-	<div class="card-header">REGISTER</div>
-	<div class="card-body">
-		<form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)">
-			<div class="form-group mb-3 mt-3">
-				<label for="first_name">First Name:</label>
+<mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }">
+	<mat-card-title>REGISTER</mat-card-title>
+	<mat-card-content>
+		<form novalidate (ngSubmit)="register()" [formGroup]="userForm">
+			<mat-form-field style="width: 100%" appearance="fill">
+				<mat-label>First Name</mat-label>
 				<input
-					name="first_name"
+					matInput
 					type="text"
 					id="first_name"
-					class="form-control"
-					[(ngModel)]="user.first_name"
-					required
-					#firstNameField="ngModel" />
-			</div>
-			<div
-				*ngIf="firstNameField.touched && firstNameField.invalid"
-				class="alert alert-danger">
-				Please enter first name
-			</div>
-			<div class="form-group mb-3">
-				<label for="last_name">Last Name:</label>
+					formControlName="first_name" />
+				<mat-error
+					*ngIf="
+						userForm.get('first_name')?.touched &&
+						userForm.get('first_name')?.invalid
+					">
+					Please enter first name
+				</mat-error>
+			</mat-form-field>
+			<mat-form-field style="width: 100%" appearance="fill">
+				<mat-label>Last Name</mat-label>
 				<input
-					name="last_name"
+					matInput
 					type="text"
 					id="last_name"
-					class="form-control"
-					[(ngModel)]="user.last_name"
-					required
-					#lastNameField="ngModel" />
-			</div>
-			<div
-				*ngIf="lastNameField.touched && lastNameField.invalid"
-				class="alert alert-danger">
-				Please enter last name
-			</div>
-			<div class="form-group mb-3">
-				<label for="email">Email:</label>
+					formControlName="last_name" />
+				<mat-error
+					*ngIf="
+						userForm.get('last_name')?.touched &&
+						userForm.get('last_name')?.invalid
+					">
+					Please enter last name
+				</mat-error>
+			</mat-form-field>
+
+			<mat-form-field style="width: 100%" appearance="fill">
+				<mat-label>Email</mat-label>
 				<input
-					name="email"
+					matInput
 					type="email"
 					id="email"
-					class="form-control"
-					[(ngModel)]="user.email"
-					required
-					#emailField="ngModel" />
-			</div>
-			<div
-				*ngIf="emailField.touched && emailField.invalid"
-				class="alert alert-danger">
-				Please enter email
-			</div>
-			<div class="form-group mb-3">
-				<label for="password">Password:</label>
+					formControlName="email" />
+				<mat-error
+					*ngIf="
+						userForm.get('email')?.touched &&
+						userForm.get('email')?.invalid
+					">
+					Please enter email
+				</mat-error>
+			</mat-form-field>
+			<mat-form-field style="width: 100%" appearance="fill">
+				<mat-label>Password</mat-label>
 				<input
-					minlength="4"
-					name="password"
+					matInput
 					type="password"
 					id="password"
-					class="form-control"
-					[(ngModel)]="user.password"
-					#passwordField="ngModel"
-					required />
-			</div>
-			<div
-				*ngIf="passwordField.touched && passwordField.invalid"
-				class="alert alert-danger">
-				Password should be atleast 4 characters long
-			</div>
-			<button type="submit" class="btn btn-primary">Register</button>
+					formControlName="password" />
+				<mat-error
+					*ngIf="
+						userForm.get('password')?.touched &&
+						userForm.get('password')?.invalid
+					">
+					Password should be atleast 4 characters long
+				</mat-error>
+			</mat-form-field>
+			<button mat-raised-button type="submit" color="primary">
+				Register
+			</button>
 		</form>
-	</div>
-</div>
+	</mat-card-content>
+</mat-card>
