--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,24 +1,10 @@
-<div
-	[ngClass]="{
-		'bg-dark text-light': darkTheme
-	}"
-	class="card"
-	style="height: 100%">
-	<div class="card-header">
+<mat-card>
+	<mat-card-title>
 		{{ pageTitle }}
-	</div>
-	<div class="card-body">
-		<div class="container-fluid">
-			<div class="text-center">Developed by:</div>
-			<div class="text-center">
-				<h3>Ritik Singla</h3>
-			</div>
-			<div class="text-center">@ritiksingla</div>
-			<div class="text-center">
-				<a class="nav-link" href="https://www.github.com/ritiksingla"
-					>GitHub</a
-				>
-			</div>
-		</div>
-	</div>
-</div>
+	</mat-card-title>
+	<mat-card-content>
+		<mat-card-subtitle class="text-center">Developed by:</mat-card-subtitle>
+		<h3 class="text-center">Ritik Singla</h3>
+		<h5 class="text-center">@ritiksingla</h5>
+	</mat-card-content>
+</mat-card>
