--- a/src/app/modules/user/components/login/login.component.html
+++ b/src/app/modules/user/components/login/login.component.html
@@ -1,8 +1,11 @@
-<mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }">
+<mat-card>
 	<mat-card-title>LOGIN</mat-card-title>
 	<mat-card-content>
 		<form novalidate (ngSubmit)="login()" [formGroup]="userForm">
-			<mat-form-field style="width: 100%" appearance="fill">
+			<mat-form-field
+				[color]="darkTheme ? 'primary' : 'accent'"
+				style="width: 100%"
+				appearance="fill">
 				<mat-label>Email</mat-label>
 				<input
 					matInput
@@ -17,7 +20,10 @@
 					Email is required
 				</mat-error>
 			</mat-form-field>
-			<mat-form-field style="width: 100%" appearance="fill">
+			<mat-form-field
+				[color]="darkTheme ? 'primary' : 'accent'"
+				style="width: 100%"
+				appearance="fill">
 				<mat-label>Password</mat-label>
 				<input
 					matInput
@@ -42,7 +48,10 @@
 					data-bs-dismiss="alert"></button>
 				{{ error }}
 			</div> -->
-			<button mat-raised-button type="submit" color="primary">
+			<button
+				mat-raised-button
+				type="submit"
+				[color]="darkTheme ? 'primary' : 'accent'">
 				Login
 			</button>
 		</form>
