--- a/src/app/modules/user/components/register/register.component.html
+++ b/src/app/modules/user/components/register/register.component.html
@@ -1,8 +1,11 @@
-<mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }">
+<mat-card>
 	<mat-card-title>REGISTER</mat-card-title>
 	<mat-card-content>
 		<form novalidate (ngSubmit)="register()" [formGroup]="userForm">
-			<mat-form-field style="width: 100%" appearance="fill">
+			<mat-form-field
+				[color]="darkTheme ? 'primary' : 'accent'"
+				style="width: 100%"
+				appearance="fill">
 				<mat-label>First Name</mat-label>
 				<input
 					matInput
@@ -17,7 +20,10 @@
 					Please enter first name
 				</mat-error>
 			</mat-form-field>
-			<mat-form-field style="width: 100%" appearance="fill">
+			<mat-form-field
+				[color]="darkTheme ? 'primary' : 'accent'"
+				style="width: 100%"
+				appearance="fill">
 				<mat-label>Last Name</mat-label>
 				<input
 					matInput
@@ -33,7 +39,10 @@
 				</mat-error>
 			</mat-form-field>
 
-			<mat-form-field style="width: 100%" appearance="fill">
+			<mat-form-field
+				[color]="darkTheme ? 'primary' : 'accent'"
+				style="width: 100%"
+				appearance="fill">
 				<mat-label>Email</mat-label>
 				<input
 					matInput
@@ -48,7 +57,10 @@
 					Please enter email
 				</mat-error>
 			</mat-form-field>
-			<mat-form-field style="width: 100%" appearance="fill">
+			<mat-form-field
+				[color]="darkTheme ? 'primary' : 'accent'"
+				style="width: 100%"
+				appearance="fill">
 				<mat-label>Password</mat-label>
 				<input
 					matInput
@@ -63,7 +75,10 @@
 					Password should be atleast 4 characters long
 				</mat-error>
 			</mat-form-field>
-			<button mat-raised-button type="submit" color="primary">
+			<button
+				mat-raised-button
+				type="submit"
+				[color]="darkTheme ? 'primary' : 'accent'">
 				Register
 			</button>
 		</form>
